@@ -27,8 +27,6 @@
 #include <gsl/gsl_blas.h>
 #include <gsl/gsl_poly.h>
 
-#define SCALE_SUB2D     1
-
 /*
  * This module implements a 2D subspace trust region subproblem method,
  * as outlined in
@@ -50,7 +48,7 @@
  * 
  * with constraints:
  *
- * ||dx|| <= delta
+ * ||D dx|| <= delta
  * dx \in span{dx_sd, dx_gn}
  *
  * where B is the Hessian matrix, B = J^T J
@@ -60,11 +58,11 @@
  * 1. preloop:
  *    a. Compute Gauss-Newton and steepest descent vectors,
  *       dx_gn, dx_sd
- *    b. Compute an orthonormal basis for span(dx_sd, dx_gn) by
- *       constructing W = [ dx_sd, dx_gn ] and performing a QR
+ *    b. Compute an orthonormal basis for span(D dx_sd, D dx_gn) by
+ *       constructing W = [ D dx_sd, D dx_gn ] and performing a QR
  *       decomposition of W. The 2 columns of the Q matrix
  *       will then span the column space of W. W should have rank 2
- *       unless dx_sd and dx_gn are parallel, in which case it will
+ *       unless D*dx_sd and D*dx_gn are parallel, in which case it will
  *       have rank 1.
  *    c. Precompute various quantities needed for the step calculation
  *
@@ -151,6 +149,9 @@ static int subspace2D_preduction(const void * vtrust_state, const gsl_vector * d
 static int subspace2D_solution(const double lambda, gsl_vector * x,
                                subspace2D_state_t * state);
 static double subspace2D_objective(const gsl_vector * x, subspace2D_state_t * state);
+static int subspace2D_calc_gn(const gsl_multifit_nlinear_trust_state * trust_state, gsl_vector * dx);
+static int subspace2D_calc_sd(const gsl_multifit_nlinear_trust_state * trust_state, gsl_vector * dx,
+                              subspace2D_state_t * state);
 
 static void *
 subspace2D_alloc (const void * params, const size_t n, const size_t p)
@@ -321,124 +322,49 @@ subspace2D_preloop(const void * vtrust_state, void * vstate)
   const gsl_multifit_nlinear_trust_state *trust_state =
     (const gsl_multifit_nlinear_trust_state *) vtrust_state;
   subspace2D_state_t *state = (subspace2D_state_t *) vstate;
-  const gsl_multifit_nlinear_parameters *params = trust_state->params;
-  double u;
-  double norm_g;  /* ||g|| */
-  double norm_Jg; /* || J g || */
-  double alpha;   /* ||g||^2 / ||Jg||^2 */
-  double norm_Dinvg;   /* || D^{-1} g || */
-  double norm_JDinv2g; /* || J D^{-2} g || */
   gsl_vector_view v;
   double work_data[2];
   gsl_vector_view work = gsl_vector_view_array(work_data, 2);
   int signum;
 
-#if 0 /* XXX */
-  print_octave(trust_state->J, "J");
-  printv_octave(trust_state->f, "f");
-  printv_octave(trust_state->diag, "d");
-#endif
-
-  /* initialize linear least squares solver */
-  status = (params->solver->init)(trust_state, trust_state->solver_state);
-  if (status)
-    return status;
-
-  /* prepare the linear solver to compute Gauss-Newton step */
-  status = (params->solver->presolve)(0.0, trust_state, trust_state->solver_state);
-  if (status)
-    return status;
-
-  /* solve: J dx_gn = -f for Gauss-Newton step */
-  status = (params->solver->solve)(trust_state->f,
-                                   state->dx_gn,
-                                   trust_state,
-                                   trust_state->solver_state);
+  /* calculate Gauss-Newton step */
+  status = subspace2D_calc_gn(trust_state, state->dx_gn);
   if (status)
     return status;
 
   /* now calculate the steepest descent step */
-
-#if SCALE_SUB2D
-
-  /* compute: workn = J*g */
-  gsl_blas_dgemv(CblasNoTrans, 1.0, trust_state->J, trust_state->g, 0.0, state->workn);
-
-  /* compute |g| and |Jg| */
-  norm_g = gsl_blas_dnrm2(trust_state->g);
-  norm_Jg = gsl_blas_dnrm2(state->workn);
-
-  /* alpha = |g|^2 / |Jg|^2 */
-  u = norm_g / norm_Jg;
-  alpha = u * u;
-
-  /* dx_sd = -alpha * g */
-  gsl_vector_memcpy(state->dx_sd, trust_state->g);
-  gsl_vector_scale(state->dx_sd, -alpha);
-
-  /* store norms */
-  state->norm_Dgn = gsl_blas_dnrm2(state->dx_gn);
-  state->norm_Dsd = gsl_blas_dnrm2(state->dx_sd);
-
-#else
-
-  /* compute workp = D^{-1} g and its norm */
-  gsl_vector_memcpy(state->workp, trust_state->g);
-  gsl_vector_div(state->workp, trust_state->diag);
-  norm_Dinvg = gsl_blas_dnrm2(state->workp);
-
-  /* compute workp = D^{-2} g */
-  gsl_vector_div(state->workp, trust_state->diag);
-
-  /* compute: workn = J D^{-2} g */
-  gsl_blas_dgemv(CblasNoTrans, 1.0, trust_state->J, state->workp, 0.0, state->workn);
-  norm_JDinv2g = gsl_blas_dnrm2(state->workn);
-
-  u = norm_Dinvg / norm_JDinv2g;
-  alpha = u * u;
-
-  /* dx_sd = -alpha D^{-2} g */
-  gsl_vector_memcpy(state->dx_sd, state->workp);
-  gsl_vector_scale(state->dx_sd, -alpha);
+  status = subspace2D_calc_sd(trust_state, state->dx_sd, state);
+  if (status)
+    return status;
 
   /* store norms */
   state->norm_Dgn = scaled_enorm(trust_state->diag, state->dx_gn);
   state->norm_Dsd = scaled_enorm(trust_state->diag, state->dx_sd);
 
-#endif
-
   /*
-   * now compute orthonormal basis for span(dx_sd, dx_gn) using
-   * QR decomposition; set W = [ dx_sd, dx_gn ] and then
-   * the Q matrix will form a basis for Col(W)
+   * now compute orthonormal basis for span(D dx_sd, D dx_gn) using
+   * QR decomposition; set W = [ D dx_sd, D dx_gn ] and normalize each
+   * column to unit magnitude. Then the Q matrix will form a basis for Col(W)
    */
 
   v = gsl_matrix_column(state->W, 0);
   gsl_vector_memcpy(&v.vector, state->dx_sd);
-  u = gsl_blas_dnrm2(state->dx_sd);
-  if (u != 0)
-    gsl_vector_scale(&v.vector, 1.0 / u);
+  gsl_vector_mul(&v.vector, trust_state->diag);
+  if (state->norm_Dsd != 0)
+    gsl_vector_scale(&v.vector, 1.0 / state->norm_Dsd);
 
   v = gsl_matrix_column(state->W, 1);
   gsl_vector_memcpy(&v.vector, state->dx_gn);
-  u = gsl_blas_dnrm2(state->dx_gn);
-  if (u != 0)
-    gsl_vector_scale(&v.vector, 1.0 / u);
-
-#if 0
-  print_octave(state->W, "W");
-#endif
+  gsl_vector_mul(&v.vector, trust_state->diag);
+  if (state->norm_Dgn != 0)
+    gsl_vector_scale(&v.vector, 1.0 / state->norm_Dgn);
 
   /* use a rank revealing QR decomposition in case dx_sd and dx_gn
    * are parallel */
   gsl_linalg_QRPT_decomp(state->W, state->tau, state->perm, &signum, &work.vector);
 
   /* check for parallel dx_sd, dx_gn, in which case rank will be 1 */
-#if 1 /*XXX*/
   state->rank = gsl_linalg_QRPT_rank(state->W, -1.0);
-#else
-  state->rank = gsl_linalg_QRPT_rank(state->W, GSL_DBL_EPSILON);
-#endif
 
   if (state->rank == 2)
     {
@@ -451,47 +377,6 @@ subspace2D_preloop(const void * vtrust_state, void * vstate)
       size_t i;
       gsl_matrix_view JQ = gsl_matrix_submatrix(state->JQ, 0, 0, state->n, GSL_MIN(2, p));
       double B00, B10, B11, g0, g1;
-
-#if SCALE_SUB2D
-
-      /* compute subg */
-
-      gsl_vector_memcpy(state->workp, trust_state->g);
-      gsl_linalg_QR_QTvec(state->W, state->tau, state->workp);
-
-      for (i = 0; i < 2; ++i)
-        {
-          double gi = gsl_vector_get(state->workp, i);
-          gsl_vector_set(state->subg, i, gi);
-        }
-
-      /* JQ = J * Q */
-      gsl_matrix_memcpy(state->JQ, trust_state->J);
-      gsl_linalg_QR_matQ(state->W, state->tau, state->JQ);
-
-      /* subB = (JQ)' (JQ) = Q' J' J Q = Q' B Q */
-      gsl_blas_dsyrk(CblasLower, CblasTrans, 1.0, &JQ.matrix, 0.0, state->subB);
-
-      B00 = gsl_matrix_get(state->subB, 0, 0);
-      B10 = gsl_matrix_get(state->subB, 1, 0);
-      B11 = gsl_matrix_get(state->subB, 1, 1);
-
-      g0 = gsl_vector_get(state->subg, 0);
-      g1 = gsl_vector_get(state->subg, 1);
-
-      state->trB = B00 + B11;
-      state->detB = B00*B11 - B10*B10;
-      state->normg = gsl_blas_dnrm2(state->subg);
-
-      /* g^T adj(B)^T adj(B) g */
-      state->term0 = (B10*B10 + B11*B11)*g0*g0 -
-                     2*B10*(B00 + B11)*g0*g1 +
-                     (B00*B00 + B10*B10)*g1*g1;
-
-      /* g^T adj(B)^T g */
-      state->term1 = B11 * g0 * g0 + g1 * (B00*g1 - 2*B10*g0);
-
-#else
 
       /* compute subg */
       gsl_vector_memcpy(state->workp, trust_state->g);
@@ -538,27 +423,14 @@ subspace2D_preloop(const void * vtrust_state, void * vstate)
       /* g^T adj(B)^T g */
       state->term1 = B11 * g0 * g0 + g1 * (B00*g1 - 2*B10*g0);
 
-#endif
-
     }
-
-#if 0 /*XXX*/
-  fprintf(stdout, "|dx_gn| = %.12e |dx_sd| = %.12e\n", state->norm_Dgn, state->norm_Dsd);
-#endif
-
-#if 0
-  printv_octave(state->dx_gn, "dx_gn");
-  printv_octave(state->dx_sd, "dx_sd");
-  print_octave(state->subB, "B");
-  printv_octave(state->subg, "g");
-#endif
 
   return GSL_SUCCESS;
 }
 
 
 /*
-2Dsubspace_step()
+subspace2D_step()
   Calculate a new step with 2D subspace method. Based on [1]. We
 seek a vector dx in span{dx_gn, dx_sd} which minimizes the model
 function subject to ||dx|| <= delta
@@ -590,20 +462,21 @@ subspace2D_step(const void * vtrust_state, const double delta,
     {
       int status;
       const double delta_sq = delta * delta;
-      double TrB_D = state->trB * delta;
-      double detB_D = state->detB * delta;
-      double normg_sq = state->normg * state->normg;
       double u = state->normg / delta;
       double a[5];
       double z[8];
 
-#if 0
+#if 1
       a[0] = state->detB * state->detB - state->term0 / delta_sq;
       a[1] = 2 * state->detB * state->trB - 2 * state->term1 / delta_sq;
       a[2] = state->trB * state->trB + 2 * state->detB - u * u;
       a[3] = 2 * state->trB;
       a[4] = 1.0;
 #else
+      double TrB_D = state->trB * delta;
+      double detB_D = state->detB * delta;
+      double normg_sq = state->normg * state->normg;
+
       a[0] = detB_D * detB_D - state->term0;
       a[1] = 2 * state->detB * state->trB * delta_sq - 2 * state->term1;
       a[2] = TrB_D * TrB_D + 2 * state->detB * delta_sq - normg_sq;
@@ -638,6 +511,7 @@ subspace2D_step(const void * vtrust_state, const double delta,
                 continue; /* singular matrix system */
 
               /* ensure ||x|| = delta */
+
               normx = gsl_blas_dnrm2(&x.vector);
               if (normx == 0.0)
                 continue;
@@ -651,13 +525,11 @@ subspace2D_step(const void * vtrust_state, const double delta,
                   mini = (int) i;
                   min = cost;
                 }
-
-              /*fprintf(stderr, "|x| = %.12e (%.12e) cost = %.12e\n", gsl_blas_dnrm2(&x.vector), delta, cost);*/
             }
 
           if (mini < 0)
             {
-              /*XXXfprintf(stderr, "ERROR: did not find minimizer\n");*/
+              /* did not find minimizer - should not get here */
               return GSL_FAILURE;
             }
           else
@@ -665,15 +537,14 @@ subspace2D_step(const void * vtrust_state, const double delta,
               /* compute x which minimizes objective function */
               subspace2D_solution(z[2*mini], &x.vector, state);
 
-              /* dx = W * x */
+              /* dx = Q * x */
               gsl_vector_set_zero(dx);
               gsl_vector_set(dx, 0, gsl_vector_get(&x.vector, 0));
               gsl_vector_set(dx, 1, gsl_vector_get(&x.vector, 1));
               gsl_linalg_QR_Qvec(state->W, state->tau, dx);
 
-#if !SCALE_SUB2D
+              /* compute final dx by multiplying by D^{-1} */
               gsl_vector_div(dx, trust_state->diag);
-#endif
             }
         }
       else
@@ -681,14 +552,6 @@ subspace2D_step(const void * vtrust_state, const double delta,
           GSL_ERROR ("gsl_poly_complex_solve failed", status);
         }
     }
-
-#if 0
-#if SCALE_SUB2D
-  fprintf(stdout, "|dx| = %.12e\n", gsl_blas_dnrm2(dx));
-#else
-  fprintf(stdout, "|dx| = %.12e\n", scaled_enorm(trust_state->diag, dx));
-#endif
-#endif
 
   return GSL_SUCCESS;
 }
@@ -717,7 +580,6 @@ subspace2D_solution(const double lambda, gsl_vector * x,
   double B00 = gsl_matrix_get(state->subB, 0, 0);
   double B10 = gsl_matrix_get(state->subB, 1, 0);
   double B11 = gsl_matrix_get(state->subB, 1, 1);
-  int signum;
 
   /* construct C = B + lambda*I */
   gsl_matrix_set(&C.matrix, 0, 0, B00 + lambda);
@@ -725,65 +587,9 @@ subspace2D_solution(const double lambda, gsl_vector * x,
   gsl_matrix_set(&C.matrix, 0, 1, B10);
   gsl_matrix_set(&C.matrix, 1, 1, B11 + lambda);
 
-#if 0
+  /* use modified Cholesky in case C is not positive definite */
   gsl_linalg_mcholesky_decomp(&C.matrix, state->perm, NULL);
   gsl_linalg_mcholesky_solve(&C.matrix, state->perm, state->subg, x);
-#elif 1
-  {
-    double D_data[4];
-    double V_data[4];
-    double S_data[2];
-    double work_data[2];
-    gsl_matrix_view V = gsl_matrix_view_array(V_data, 2, 2);
-    gsl_matrix_view D = gsl_matrix_view_array(D_data, 2, 2);
-    gsl_vector_view S = gsl_vector_view_array(S_data, 2);
-    gsl_vector_view work = gsl_vector_view_array(work_data, 2);
-    double tol;
-    double S0, S1;
-    double r;
-
-    gsl_matrix_memcpy(&D.matrix, &C.matrix);
-
-#if 0
-    gsl_linalg_SV_decomp(&C.matrix, &V.matrix, &S.vector, &work.vector);
-#else
-    gsl_linalg_SV_decomp_jacobi(&C.matrix, &V.matrix, &S.vector);
-#endif
-
-    S0 = S_data[0];
-    S1 = S_data[1];
-    tol = 2 * S0 * GSL_DBL_EPSILON;
-
-    if (S1 < tol)
-      {
-        /* matrix is near-singular, don't try to compute solution */
-        return GSL_ESING;
-      }
-
-    gsl_linalg_SV_solve(&C.matrix, &V.matrix, &S.vector, state->subg, x);
-
-    gsl_vector_memcpy(&work.vector, state->subg);
-    gsl_blas_dsymv(CblasUpper, -1.0, &D.matrix, x, 1.0, &work.vector);
-
-    r = gsl_blas_dnrm2(&work.vector);
-
-#if 0 /* XXX */
-    if (S1 < tol && r > 1.0e3)
-      {
-        fprintf(stderr, "residual = %.12e\n", r);
-        print_octave(&D.matrix, "C");
-        printv_octave(state->subg, "g");
-        printv_octave(x, "y");
-
-        gsl_linalg_mcholesky_decomp(&C.matrix, state->perm, NULL);
-        gsl_linalg_mcholesky_solve(&C.matrix, state->perm, state->subg, x);
-        printv_octave(x, "y_chol");
-
-        exit(1);
-      }
-#endif
-  }
-#endif
 
   gsl_vector_scale(x, -1.0);
 
@@ -806,6 +612,89 @@ subspace2D_objective(const gsl_vector * x, subspace2D_state_t * state)
   gsl_blas_ddot(x, &y.vector, &f);
 
   return f;
+}
+
+/*
+subspace2D_calc_gn()
+  Calculate Gauss-Newton step which satisfies:
+
+J dx_gn = -f
+
+Inputs: trust_state - trust state variables
+        dx          - (output) Gauss-Newton step
+
+Return: success/error
+*/
+
+static int
+subspace2D_calc_gn(const gsl_multifit_nlinear_trust_state * trust_state, gsl_vector * dx)
+{
+  int status;
+  const gsl_multifit_nlinear_parameters *params = trust_state->params;
+
+  /* initialize linear least squares solver */
+  status = (params->solver->init)(trust_state, trust_state->solver_state);
+  if (status)
+    return status;
+
+  /* prepare the linear solver to compute Gauss-Newton step */
+  status = (params->solver->presolve)(0.0, trust_state, trust_state->solver_state);
+  if (status)
+    return status;
+
+  /* solve: J dx_gn = -f for Gauss-Newton step */
+  status = (params->solver->solve)(trust_state->f,
+                                   dx,
+                                   trust_state,
+                                   trust_state->solver_state);
+  if (status)
+    return status;
+
+  return GSL_SUCCESS;
+}
+
+/*
+subspace2D_calc_sd()
+  Calculate steepest descent step,
+
+dx_sd = - || D^{-1} g ||^2 / || J D^{-2} g ||^2 D^{-2} g
+
+Inputs: trust_state - trust state variables
+        dx          - (output) steepest descent vector
+        state       - workspace
+
+Return: success/error
+*/
+
+static int
+subspace2D_calc_sd(const gsl_multifit_nlinear_trust_state * trust_state, gsl_vector * dx,
+                   subspace2D_state_t * state)
+{
+  double norm_Dinvg;   /* || D^{-1} g || */
+  double norm_JDinv2g; /* || J D^{-2} g || */
+  double alpha;        /* || D^{-1} g ||^2 / || J D^{-2} g ||^2 */
+  double u;
+
+  /* compute workp = D^{-1} g and its norm */
+  gsl_vector_memcpy(state->workp, trust_state->g);
+  gsl_vector_div(state->workp, trust_state->diag);
+  norm_Dinvg = gsl_blas_dnrm2(state->workp);
+
+  /* compute workp = D^{-2} g */
+  gsl_vector_div(state->workp, trust_state->diag);
+
+  /* compute: workn = J D^{-2} g */
+  gsl_blas_dgemv(CblasNoTrans, 1.0, trust_state->J, state->workp, 0.0, state->workn);
+  norm_JDinv2g = gsl_blas_dnrm2(state->workn);
+
+  u = norm_Dinvg / norm_JDinv2g;
+  alpha = u * u;
+
+  /* dx_sd = -alpha D^{-2} g */
+  gsl_vector_memcpy(dx, state->workp);
+  gsl_vector_scale(dx, -alpha);
+
+  return GSL_SUCCESS;
 }
 
 static const gsl_multifit_nlinear_trs subspace2D_type =
